my-app-chart/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  labels:
    app: postgres-db
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
    - name: metrics
      protocol: TCP
      port: 9187
      targetPort: 9187
